--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
     "thirdweb": "^0.9.7"
   },
   "devDependencies": {
