--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@usedapp/core": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "^12.0.4",
+    "ethers": "^5.7.2",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
+    "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "thirdweb": "^0.9.7"
   },
