--- a/dex/package.json
+++ b/dex/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dexv2",
+  "name": "dex",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
     "eslint": "^8.6.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.2",
     "typescript": "^4.0.0"
   },
   "prettier": {
