--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.0.7",
     "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "@thirdweb-dev/react": "^3.6.8",
     "@usedapp/core": "^1.2.2",
     "eslint": "8.30.0",
