--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/provider": "^2.1.0",
+    "@chakra-ui/react": "^2.4.9",
+    "@chakra-ui/toast": "^5.0.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.0.7",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
@@ -17,6 +22,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "^12.0.4",
     "ethers": "^5.7.2",
+    "framer-motion": "^8.4.6",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
