--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
+    "styled-components": "^5.3.6",
     "thirdweb": "^0.9.7"
   },
   "devDependencies": {
