--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.35.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
