--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/image-url": "^1.0.1",
     "@thirdweb-dev/react": "^3.6.8",
     "@usedapp/core": "^1.2.2",
+    "eslint-config-next": "^13.2.1",
     "ethers": "^5.7.2",
     "framer-motion": "^8.4.6",
     "next": "13.0.7",
